# spec-kit-blueprint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config-template.yml  extension.yml  pyproject.toml
.github/workflows/: tests.yml
blueprint/: CHANGELOG.md  README.md  extension.yml
blueprint/commands/: speckit.blueprint.distill.md  speckit.blueprint.init.md  speckit.blueprint.remap.md  speckit.blueprint.status.md
blueprint/scripts/bash/: blueprint-state.sh
blueprint/scripts/powershell/: blueprint-state.ps1
blueprint/templates/: blueprint-template.md
commands/: speckit.blueprint-index.distill.md  speckit.blueprint-index.init.md  speckit.blueprint-index.remap.md  speckit.blueprint-index.status.md  speckit.blueprint.distill.md  speckit.blueprint.init.md  speckit.blueprint.remap.md  speckit.blueprint.status.md
docs/: autonomous-harness.md
scripts/bash/: blueprint-state.sh
scripts/powershell/: blueprint-state.ps1
templates/: blueprint-template.md
tests/: check_remap_test.sh  harness_loop_test.sh  oracle_test.sh
