[project]
name = "spec-kit-blueprint"
version = "0.1.1"
description = "Blueprint — a Spec Kit extension: a living architecture map kept honest by a deterministic, machine-first CI gate."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

# The extension itself is pure bash + git and ships no Python. This project file
# exists only to pin the *development* toolchain (commit conventions, releases).
[tool.uv]
package = false

[dependency-groups]
dev = [
  "commitizen>=4.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
version_files = [
  "extension.yml:^  version:",
]
update_changelog_on_bump = true
changelog_incremental = true
changelog_merge_prerelease = true
major_version_zero = true
# 0.1.0 predates these conventions (squashed initial commit); generate only
# what follows it and leave the hand-written 0.1.0 entry alone.
# NOTE: this rev is INCLUSIVE — cz regenerates every entry from here onward and
# will overwrite hand-written ones. 0.1.0 and 0.1.1 are hand-written (0.1.0
# predates these conventions), so generation must start strictly after them.
changelog_start_rev = "v0.1.1"

# Keep a Changelog section names. Note conventional-commits only lets
# feat/fix/refactor/perf/BREAKING CHANGE reach the changelog — a user-visible
# documentation error is a `fix`, not a `docs`, if it belongs in release notes.
[tool.commitizen.change_type_map]
feat = "Added"
fix = "Fixed"
refactor = "Changed"
perf = "Changed"
